<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/maincolor"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenulistActivity" >
    
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="116dp"
	    android:orientation="vertical" >
	    <com.xnc.ui.textview.MenuItem android:text="@string/menu_fragment_find_perfect_ring" android:onClick="handleFindRingClicked" android:textAllCaps="true" style="@style/menu_text_selection" />
		<View style="@style/menu_selection_divider" />
		<com.xnc.ui.textview.MenuItem android:text="@string/menu_fragment_saved_rings" android:onClick="handleSavedRingsClicked" android:textAllCaps="true" style="@style/menu_text_selection" />
        <View style="@style/menu_selection_divider" />
        <com.xnc.ui.textview.MenuItem android:text="@string/menu_fragment_schedule_apt" android:onClick="handleScheduleApptClicked" android:textAllCaps="true" style="@style/menu_text_selection" />
        <View style="@style/menu_selection_divider" />
        <com.xnc.ui.textview.MenuItem android:text="@string/menu_fragment_tiffany_difference" android:onClick="handleTiffanyDifferenceClicked" android:textAllCaps="true" style="@style/menu_text_selection" />
        <View style="@style/menu_selection_divider" />
        <com.xnc.ui.textview.MenuItem android:text="@string/menu_fragment_my_circle" android:onClick="handleMyCircleClicked" android:textAllCaps="true" style="@style/menu_text_selection" />
        <View style="@style/menu_selection_divider" />
        <com.xnc.ui.textview.MenuItem android:textStyle="italic" android:text="@string/menu_fragment_we_got_engaged" android:onClick="handleWeGotEngagedClicked" style="@style/menu_text_selection" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="74dp"
        android:text="TIFFANY &amp; Co."
        android:textSize="23sp"
        android:typeface="normal" />

    

</RelativeLayout>